# visitor-reg

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
.github/workflows/: build.yml
src/: main.rs
src/apis/: adm_visitors.rs  auth.rs  common.rs  greets.rs  login.rs  mod.rs  new_visitor.rs
src/data/: mod.rs  visitor.rs
templates/: adm_visitors.html  forbidden.html  hello.html  login.html  new_visitor.html  new_visitor_post.html
