[package]
name = "visitorreg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.11.1" }
axum = { version = "0.6.0-rc.4", features = ["http2", "macros"] }
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
serde = "1.0.147"
time = "0.3"
tokio = { version = "1.21.2", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-uuid-1", "with-time-0_3"] }
tracing = "0.1.37"
uuid = { version = "1.0", features = ["v4"] }
