[package]
name = "visitorreg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.11.1" }
axum = { version = "0.6.0-rc.5", features = ["http2", "macros", "headers"] }
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
clap = { version = "4.0.26", features = ["derive"] }
jsonwebtoken = { version = "8", default-features = false }
serde = { version = "1.0.147", features = ["derive"] }
serde_derive = "1.0.147"
tempfile = "3.3.0"
time = { version = "0.3", features = ["local-offset", "serde", "formatting", "macros"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-postgres = { version = "0.7.7", features = ["with-uuid-1", "with-time-0_3"] }
toml = "0.5.9"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = { version = "2.3.1", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
xlsxwriter = { version = "0.5.0", features = ["no-md5"] }
